created second version of APS Homepage

--- a/index.html
+++ b/index.html
@@ -158,6 +158,9 @@
       padding-bottom: 15px;
       text-align: center;
       font-weight: bold;
+      color: rgb(100,0,100);
+      
+      font-size: 20px;
     }
 
     body{
@@ -197,10 +200,10 @@
     <div class="container">
           <h1 class="customfont" style="text-align: center;font-size: 32px;padding-bottom: 0px;margin-bottom: 0px;padding-top: 0px;">ALLIANCE PUBLIC SCHOOL</h1>
         <div class="row">
-          <div class="col-sm-8" style="display: table-cell;font-size: 16px;text-align: left;padding-left: 500px "><br>
+          <div class="col-sm-8" style="display: table-cell;font-size: 16px;text-align: right;padding-right: 50px; "><br>
           <span style="font-family: monotype corsiva;">Mentored by </span>
            <span style="font-family: century schoolbook;"><b>IIT</b>ians & <b>NIT</b>ians</span></div>
-          <div class="col-sm-4" style="margin-top: 0px;font-size: 14px;font-family: monotype corsiva;text-decoration: none;color: white;padding-left: 100px">preparing you for life</div>
+          <div class="col-sm-4" style="margin-top: 0px;font-size: 14px;font-family: monotype corsiva;text-decoration: none;color: white;">preparing you for life</div>
       </div>
     </div>
     </div>
@@ -297,24 +300,6 @@
   </div>
   </div>  
     
-    <!-- <div class="dropdown">
-     <span id="menu">Quick Links</span>
-            <div class="dropdown-content" >
-                <table id="tab">
-                    <tr><td>Fee Structure</td>    </tr>
-                    <tr><td>Admission
-                    <ul>
-            <li>Admission Form</li>
-            <li>Payment Link</li>
-            <li>FAQs</li>
-        </ul>
-                    </td>  </tr>
-                    <tr><td>School Bus route</td></tr>
-                    <tr><td>Join Us</td>  </tr>
-                    <tr><td>Contact Us</td>  </tr>
-                </table>
-            </div> 
-        </div> -->
    
     <br>
 
