created third version of my homepage

--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
     <div class="dropdown-content">
       <table id="tab">
       <tr><th>The School</th>    <th>The Team</th><td>We are Here</td></tr>
-      <tr><td>How it all started</td>    <td>Administration</td><td>How to reach Us</td></tr>
+      <tr><td><a href="APS/"> How it all started</a></td>    <td>Administration</td><td>How to reach Us</td></tr>
       <tr><td>Vision, Mission & Motto</td> <td>The Principle</td> <td>APS Blog</td></tr>
       <tr><td>Values & Objectives</td> <td>Educators</td> <td></td></tr>
       <tr><td>What makes APS truely distinvtive?</td><td>Mentors/Inspiration</td><td></td></tr>
