--- a/index.html
+++ b/index.html
@@ -230,11 +230,11 @@
     <div class="dropdown-content">
       <table id="tab">
       <tr><th>The School</th>    <th>The Team</th><td>We are Here</td></tr>
-      <tr><td><a href="APS/"> How it all started</a></td>    <td>Administration</td><td>How to reach Us</td></tr>
-      <tr><td>Vision, Mission & Motto</td> <td>The Principle</td> <td>APS Blog</td></tr>
-      <tr><td>Values & Objectives</td> <td>Educators</td> <td></td></tr>
-      <tr><td>What makes APS truely distinvtive?</td><td>Mentors/Inspiration</td><td></td></tr>
-      <tr><td></td><td>Collaborations</td><td></td></tr>
+      <tr><td><a href="APS/#a1"> How it all started</a></td>    <td><a href="APS/#a5">Administration</a></td><td>How to reach Us</td></tr>
+      <tr><td><a href="APS/#a2"> Vision, Mission & Motto</a></td> <td><a href="APS/#a6">The Principle</a></td> <td>APS Blog</td></tr>
+      <tr><td><a href="APS/#a3"> Values & Objectives</a></td> <td><a href="APS/#a7">Educators</a></td> <td></td></tr>
+      <tr><td><a href="APS/#a4">What makes APS truely distinvtive?</a></td><td><a href="APS/#a8">Mentors/Inspiration</a></td><td></td></tr>
+      <tr><td></td><td><a href="APS/#a8">Collaborations</a></td><td></td></tr>
       </table>
       </div>
     </div>
