created third version of Homepage

--- a/index.html
+++ b/index.html
@@ -229,12 +229,12 @@
     <span id="menu" class="sliding-middle-out">About APS</span>
     <div class="dropdown-content">
       <table id="tab">
-      <tr><th>The School</th>    <th>The Team</th><td>We are Here</td></tr>
-      <tr><td><a href="APS/#a1"> How it all started</a></td>    <td><a href="APS/#a5">Administration</a></td><td>How to reach Us</td></tr>
-      <tr><td><a href="APS/#a2"> Vision, Mission & Motto</a></td> <td><a href="APS/#a6">The Principle</a></td> <td>APS Blog</td></tr>
+      <tr><th>The School</th>    <th>The Team</th><td><a href="APS/a10">We are Here</a></td></tr>
+      <tr><td><a href="APS/#a1"> How it all started</a></td>    <td><a href="APS/#a5">Administration</a></td><td><a href="APS/#a11">How to reach Us</a></td></tr>
+      <tr><td><a href="APS/#a2"> Vision, Mission & Motto</a></td> <td><a href="APS/#a6">The Principle</a></td> <td><a href="APS/a12">APS Blog</a></td></tr>
       <tr><td><a href="APS/#a3"> Values & Objectives</a></td> <td><a href="APS/#a7">Educators</a></td> <td></td></tr>
       <tr><td><a href="APS/#a4">What makes APS truely distinvtive?</a></td><td><a href="APS/#a8">Mentors/Inspiration</a></td><td></td></tr>
-      <tr><td></td><td><a href="APS/#a8">Collaborations</a></td><td></td></tr>
+      <tr><td></td><td><a href="APS/#a9">Collaborations</a></td><td></td></tr>
       </table>
       </div>
     </div>
