created third version of Homepage

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     .front{
       padding-bottom: 0px;
       background-color: white;
-      height: 450px;
+      height: 470px;
     }
     #card-2{
       margin-right: 0px;
@@ -104,8 +104,7 @@
     	white-space: nowrap;
     overflow: hidden;
     padding-right: 25px;
-    padding-left:5px;
-    	
+    padding-left:5px;	
 	}
   .dropdown-content td:hover {
     color: blue;
@@ -229,12 +228,12 @@
     <span id="menu" class="sliding-middle-out">About APS</span>
     <div class="dropdown-content">
       <table id="tab">
-      <tr><th>The School</th>    <th>The Team</th><td><a href="APS/a10">We are Here</a></td></tr>
-      <tr><td><a href="APS/#a1"> How it all started</a></td>    <td><a href="APS/#a5">Administration</a></td><td><a href="APS/#a11">How to reach Us</a></td></tr>
-      <tr><td><a href="APS/#a2"> Vision, Mission & Motto</a></td> <td><a href="APS/#a6">The Principle</a></td> <td><a href="APS/a12">APS Blog</a></td></tr>
-      <tr><td><a href="APS/#a3"> Values & Objectives</a></td> <td><a href="APS/#a7">Educators</a></td> <td></td></tr>
-      <tr><td><a href="APS/#a4">What makes APS truely distinvtive?</a></td><td><a href="APS/#a8">Mentors/Inspiration</a></td><td></td></tr>
-      <tr><td></td><td><a href="APS/#a9">Collaborations</a></td><td></td></tr>
+      <tr><th>The School</th>    <th>The Team</th><td><a href="APS/a10" style="text-decoration: none;">We are Here</a></td></tr>
+      <tr><td><a href="APS/#a1" style="text-decoration: none;"> How it all started</a></td>    <td><a href="APS/#a5" style="text-decoration: none;">Administration</a></td><td><a href="APS/#a11" style="text-decoration: none;">How to reach Us</a></td></tr>
+      <tr><td><a href="APS/#a2" style="text-decoration: none;"> Vision, Mission & Motto</a></td> <td><a href="APS/#a6" style="text-decoration: none;">The Principle</a></td> <td><a href="APS/a12" style="text-decoration: none;">APS Blog</a></td></tr>
+      <tr><td><a href="APS/#a3" style="text-decoration: none;"> Values & Objectives</a></td> <td><a href="APS/#a7" style="text-decoration: none;">Educators</a></td> <td></td></tr>
+      <tr><td><a href="APS/#a4" style="text-decoration: none;">What makes APS truely distinvtive?</a></td><td><a href="APS/#a8" style="text-decoration: none;">Mentors/Inspiration</a></td><td></td></tr>
+      <tr><td></td><td><a href="APS/#a9" style="text-decoration: none;">Collaborations</a></td><td></td></tr>
       </table>
       </div>
     </div>
@@ -320,11 +319,11 @@
 
 
 
-
+<br>
 
 <div class="row"><div class="col-sm-3" style="background-color: rgb(212,202,81);margin-right: 0px" id="cd">
       <div id="card-2" style="height: 510px;margin-left: 0px;margin-right: 0px;padding-right: 25px;">
-      <br><div class="front" style="box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
+      <div class="front" style="box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
         <img src="newsaps.png" class="img-responsive" width="200px" style="margin:auto;"><h1 style="font-family: Viner Hand ITC;font-size: 45px;text-align: center;">NEWS</h1><br><br><br>
       <h2 style="padding-left: 20px;padding-right: 20;font-family: Comic Sans MS;">"I think this School is best for my child."</h2>
       <i style="text-align: right;">.....Mrs. Arpana Chawla, guardian</i>
