created third version of homepage

--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
       <table id="tab">
       <tr><th>The School</th>    <th>The Team</th><td><a href="APS/a10" style="text-decoration: none;">We are Here</a></td></tr>
       <tr><td><a href="APS/#a1" style="text-decoration: none;"> How it all started</a></td>    <td><a href="APS/#a5" style="text-decoration: none;">Administration</a></td><td><a href="APS/#a11" style="text-decoration: none;">How to reach Us</a></td></tr>
-      <tr><td><a href="APS/#a2" style="text-decoration: none;"> Vision, Mission & Motto</a></td> <td><a href="APS/#a6" style="text-decoration: none;">The Principle</a></td> <td><a href="APS/a12" style="text-decoration: none;">APS Blog</a></td></tr>
+      <tr><td><a href="APS/#a2" style="text-decoration: none;"> Vision, Mission & Motto</a></td> <td><a href="APS/#a6" style="text-decoration: none;">The Principle</a></td> <td><a href="APS/#a12" style="text-decoration: none;">APS Blog</a></td></tr>
       <tr><td><a href="APS/#a3" style="text-decoration: none;"> Values & Objectives</a></td> <td><a href="APS/#a7" style="text-decoration: none;">Educators</a></td> <td></td></tr>
       <tr><td><a href="APS/#a4" style="text-decoration: none;">What makes APS truely distinvtive?</a></td><td><a href="APS/#a8" style="text-decoration: none;">Mentors/Inspiration</a></td><td></td></tr>
       <tr><td></td><td><a href="APS/#a9" style="text-decoration: none;">Collaborations</a></td><td></td></tr>
