created fourth version of the homepage

--- a/index.html
+++ b/index.html
@@ -90,11 +90,18 @@
       border-radius: 5px;
 	}
 	#menu{
-		font-weight: bold;
+		/*font-weight: bold;*/
     padding-left: 2px;
-    padding-right: 50px; 
-    color: #ee9900;
+    margin-right: 25px; 
+    color: #990000;
+    font-size: 20px;
 	}
+  #menu1{
+    padding-left: 2px;
+    margin-right: 115px; 
+    color: #990000;
+    font-size: 20px;
+  }
 	#tab{
 		text-align: left;
 	}
@@ -121,7 +128,7 @@
 .sliding-middle-out:after {
     content: '';
     display: block;
-    margin: auto;
+    margin: 0px;
     height: 3px;
     width: 0px;
     background: transparent;
@@ -144,8 +151,8 @@
 		padding-right: 100px
 	}*/
 	#nav{
-		text-align: center;
-    background-color: #f1f1f1;
+		text-align: right;
+    
 	}
     #news{
         border: 2px solid rgb(30,78,180);
@@ -171,8 +178,6 @@
 </style>
 <script type="text/javascript">
   function changeImage(){
-            document.getElementById("menu").style.padding-left="35%";
-            document.getElementById("menu").style.padding-right="35%";
             document.getElementById("kk").style.height="35%";
             document.getElementById("kk").style.width="35%";
             document.getElementById("myCarousel").style.height="35%";
@@ -222,13 +227,13 @@
       </div>
     </div>
     </div>
-
+<br>
 <div id="nav" >
   <div class="dropdown"  id="raj">
     <span id="menu" class="sliding-middle-out">About APS</span>
     <div class="dropdown-content">
       <table id="tab">
-      <tr><th>The School</th>    <th>The Team</th><td><a href="APS/a10" style="text-decoration: none;">We are Here</a></td></tr>
+      <tr><th>The School</th>    <th>The Team</th><td><a href="APS/#a10" style="text-decoration: none;">We are Here</a></td></tr>
       <tr><td><a href="APS/#a1" style="text-decoration: none;"> How it all started</a></td>    <td><a href="APS/#a5" style="text-decoration: none;">Administration</a></td><td><a href="APS/#a11" style="text-decoration: none;">How to reach Us</a></td></tr>
       <tr><td><a href="APS/#a2" style="text-decoration: none;"> Vision, Mission & Motto</a></td> <td><a href="APS/#a6" style="text-decoration: none;">The Principle</a></td> <td><a href="APS/#a12" style="text-decoration: none;">APS Blog</a></td></tr>
       <tr><td><a href="APS/#a3" style="text-decoration: none;"> Values & Objectives</a></td> <td><a href="APS/#a7" style="text-decoration: none;">Educators</a></td> <td></td></tr>
@@ -300,7 +305,7 @@
   </div>
 
     <div class="dropdown" >
-    <span id="menu" class="sliding-middle-out">Join Hands</span>
+    <span id="menu1" class="sliding-middle-out">Join Hands</span>
     <div class="dropdown-content">
       <table id="tab">
       <tr><td>Volunteer</td>    </tr>
@@ -319,7 +324,7 @@
 
 
 
-<br>
+
 
 <div class="row"><div class="col-sm-3" style="background-color: rgb(212,202,81);margin-right: 0px" id="cd">
       <div id="card-2" style="height: 510px;margin-left: 0px;margin-right: 0px;padding-right: 25px;">
@@ -334,7 +339,9 @@
          
            <div class="newsdiv">Effectory is the unique diary presented by us. You can order it via paytm on 9900</div><br>
               <div class="newsdiv">Effectory is the unique diary presented by us. You can order it via paytm on 9900</div><br><div class="newsdiv">Effectory is the unique diary presented by us. You can order it via paytm on 9900</div>
-           </marquee>
+           </marquee><div style="align-content: center;">
+             <span style="width: 350px;background-color: white;text-align: center;box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);color: green;">news</span>
+           </div>
            <br><br><br><br><div style="font-family: vivaldi;background-color: white;color: blue;font-size: 24px;box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);"><a href="#" style="text-decoration: none;">Vision,Mission and Motto</a></div>
       </div> 
     </div>
