created third version of homepage

--- a/index.html
+++ b/index.html
@@ -246,16 +246,16 @@
     <span id="menu" class="sliding-middle-out">Academics</span>
     <div class="dropdown-content">
       <table id="tab"><ul>
-       <tr><th>Departments</th> <th>Admissions</th>  <td></td> <th>Quick Links</th></tr>
-       <tr><td>Kindergarten</td> <td>Criteria</td>  <td>Students' Council</td> <td>CBSE</td></tr>
-       <tr><td><li>Students</li></td> <td>Fee Structure</td>  <td>Academic Calender</td> <td>NCERT</td></tr>
-       <tr><td><li>Educators</li></td> <td>Enrolment Form</td>  <td>Prizes & Rewards</td> <td>DST</td></tr>
-       <tr><td>Primary Section</td> <td>Payment Link</td>  <td>Forms</td> <td>NCTE</td></tr>
-       <tr><td><li>Students</li></td> <td>Scholarships</td>  <td></td> <td>MHRD</td></tr>
-       <tr><td><li>Educators</li></td> <td>FAQs</td>  <td></td> <td>Arvind Gupta Toys</td></tr>
-       <tr><td>Higher Section</td> <td></td>  <td></td> <td></td></tr>
-       <tr><td><li>Students</li></td> <td></td>  <td></td> <td></td></tr>
-       <tr><td><li>Educators</li></td> <td></td>  <td></td> <td></td></tr></ul>
+      <tr><th>Departments</th> <th>Admissions</th>  <th></th> <th>Quick Links</th></tr>
+      <tr> <td><a href="Academics/#b1" style="text-decoration: none;">Kindergarten</a></td> <td><a href="Academics/#b4" style="text-decoration: none;">Criteria</a></td>  <td><a href="Academics/#b10" style="text-decoration: none;">Students' Council</a></td> <td><a href="b"style="text-decoration: none;">CBSE</a></td></tr>
+      <tr><td><li><a href="Academics/#b1i" style="text-decoration: none;">Students</a></li></td> <td><a href="Academics/#b5" style=" text-decoration: none;">Fee Structure</a></td>  <td><a href="Academics/#b11" style="text-decoration: none;">     Academic Calender</a></td> <td><a href="b" style="text-decoration: none;">NCERT</a></td></tr>
+      <tr><td><li><a href="Academics/#b1ii" style="text-decoration: none;">Educators</a></li></td> <td><a href="Academics/#b6" style ="text-decoration: none;">Enrolment Form</a></td>  <td><a href="Academics/#b12" style="text-decoration: none;">Prizes & Rewards</a></td> <td><a href="b" style="text-decoration: none;">DST</a></td></tr>
+      <tr><td><a href="Academics/#b2" style="text-decoration: none;">Primary Section</a></td> <td><a href="b" style="text-decoration: none;">Payment Link</a></td>  <td><a href="Academics/#b13" style="text-decoration: none;">     Forms</a></td> <td><a href="b" style="text-decoration: none;">NCTE</a></td></tr>
+      <tr><td><li><a href="Academics/#b2i" style="text-decoration: none;">Students</a></li></td> <td><a href="Academics/#b8" style="text-decoration: none;">Scholarships</a></td>  <th></th> <td><a href="b" style="text-decoration: none;">MHRD</a></td></tr>
+      <tr><td><li><a href="Academics/#b2ii" style="text-decoration: none;">Educators</a></li></td> <td><a href="Academics/#b9" style="text-decoration: none;">FAQs</a></td>  <th></th> <td><a href="b" style="text-decoration: none;">    Arvind Gupta Toys</a></td></tr>
+      <tr><td><a href="Academics/#b3" style="text-decoration: none;">Higher Section</a></td> <td></td>      <th></th> <th>  </th></tr>
+      <tr><td><li><a href="Academics/#b3i" style="text-decoration: none;">Students</a></li></td> <td></td>  <td></td>    <td></td></tr>
+      <tr><td><li><a href="Academics/#b3ii" style="text-decoration: none;">Educators</a></li></td> <td></td>  <td></td>   <td></td></tr></ul>
       </table>
       </div>
   </div>
