created third version of homepage

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
       padding-bottom: 15px;
       text-align: center;
       font-weight: bold;
-      color: rgb(100,0,100);
+      color: rgb(255,0,205);
       
       font-size: 20px;
     }
@@ -264,42 +264,42 @@
     <div class="dropdown-content">
       <table id="tab"><ul>
        <tr><td></td> <th>Facilities</th>  <th>Life @ APS</th></tr>
-       <tr><td>Science Lab</td> <td>24x7 Internet</td>  <td>Club & Activities</td> </tr>
-       <tr><td>Computer Lab</td> <td>Biometric Attendance</td>  <td><li>Vigyanpur</li></td> </tr>
-       <tr><td>Mathematics Lab</td> <td>RFID Cards</td>  <td><li>Sahityapur</li></td> </tr>
-       <tr><td>Audio-Visual Room</td> <td>Transport</td>  <td><li>Kalashala</li></td> </tr>
-       <tr><td>Multipurpose Library</td> <td></td>  <td><li>Dramatics & Music</li></td> </tr>
-       <tr><td></td> <td></td>  <td><li>Techwiz</li></td> </tr></ul>
+       <tr><td><a href="Campus/#c1" style="text-decoration: none;">Science Lab</a></td> <td><a href="Campus/#c6" style="text-decoration: none;">24x7 Internet</a></td>  <td><a href="Campus/#c10" style="text-decoration: none;">Club & Activities</a></td> </tr>
+       <tr><td><a href="Campus/#c2" style="text-decoration: none;">Computer Lab</a></td> <td><a href="Campus/#c7" style="text-decoration: none;">Biometric Attendance</a></td>  <td><li><a href="Campus/#c11i" style="text-decoration: none;">Vigyanpur</a></li></td> </tr>
+       <tr><td><a href="Campus/#c3" style="text-decoration: none;">Mathematics Lab</a></td> <td><a href="Campus/#c8" style="text-decoration: none;">RFID Cards</a></td>  <td><li><a href="Campus/#c10ii" style="text-decoration: none;">Sahityapur</a></li></td> </tr>
+       <tr><td><a href="Campus/#c4" style="text-decoration: none;">Audio-Visual Room</a></td> <td><a href="Campus/#c9" style="text-decoration: none;">Transport</a></td>  <td><li><a href="Campus/#c10iii" style="text-decoration: none;">Kalashala</a></li></td> </tr>
+       <tr><td><a href="Campus/#c5" style="text-decoration: none;">Multipurpose Library</a></td> <th></th>  <td><li><a href="Campus/#c10iv" style="text-decoration: none;">Dramatics & Music</a></li></td> </tr>
+       <tr><th></th> <th></th>  <td><li><a href="Campus/#c10v" style="text-decoration: none;">Techwiz</a></li></td> </tr></ul>
       </table>
       </div>
   </div>
 
 
 		<div class="dropdown" >
-	  <span id="menu" class="sliding-middle-out">Gallery</span>
-	  <div class="dropdown-content">
-    	<table id="tab">
-    	<tr><th>Happenings</th>    <th>Students' Build</th><td>Achivements</td></tr>
-    	<tr><td>Celebrations</td>    <td>Craft Works</td><td>Documentaries</td></tr>
-    	<tr><td><li>Fairs and Exhibitions</li></td> <td>Science Models</td> <td></td></tr>
-      <tr><td><li>Open Day</li></td> <td>Paintings</td> <td></td></tr>
-      <tr><td>Visits and Outings</td><td></td><td></td></tr>
-      <tr><td><li>Excursions</li></td><td></td><td></td></tr>
-      <tr><td><li>Summer Camps</li></td><td></td><td></td></tr>
-      <tr><td>Visitors</td><td></td><td></td></tr>
-    	</table>
-  	  </div>
-	</div>
+    <span id="menu" class="sliding-middle-out">Gallery</span>
+    <div class="dropdown-content">
+      <table id="tab">
+      <tr><th>Happenings</th>    <th>Students' Build</th><td><a href="Gallery/#d7" style="text-decoration: none;">Achivements</a></td></tr>
+      <tr><td><a href="Gallery/#d1" style="text-decoration: none;">Celebrations</a></td>    <td><a href="Gallery/#d4" style="text-decoration: none;">Craft Works</a></td><td><a href="Gallery/#d8" style="text-decoration: none;">Documentaries</a></td></tr>
+      <tr><td><li><a href="Gallery/#d1i" style="text-decoration: none;">Fairs and Exhibitions</a></li></td> <td><a href="Gallery/#d5" style="text-decoration: none;">Science Models</a></td> <th></th></tr>
+      <tr><td><li><a href="Gallery/#d1ii" style="text-decoration: none;">Open Day</a></li></td> <td><a href="Gallery/#d6" style="text-decoration: none;">Paintings</a></td> <th></th></tr>
+      <tr><td><a href="Gallery/#d2" style="text-decoration: none;">Visits and Outings</a></td><th></th><th></th></tr>
+      <tr><td><li><a href="Gallery/#d2i" style="text-decoration: none;">Excursions</a></li></td><th></th><th></th></tr>
+      <tr><td><li><a href="Gallery/#d2ii" style="text-decoration: none;">Summer Camps</a></li></td><th></th><th></th></tr>
+      <tr><td><a href="Gallery/#d3" style="text-decoration: none;">Visitors</a></td><th></th><th></th></tr>
+      </table>
+      </div>
+  </div>
 		<div class="dropdown" >
     <span id="menu" class="sliding-middle-out">The Beginning</span>
     <div class="dropdown-content">
       <table id="tab">
       <tr><th>EK PAHAL</th>    <th></th></tr>
-      <tr><td>Anwensha</td>    <td>Community Service</td></tr>
-      <tr><td>ChangeloomsWith.in</td> <td></td> </tr>
-      <tr><td>TFC</td> <td></td> </tr>
-      <tr><td>Swamanthan</td><td></td></tr>
-      <tr><td>ASLP</td><td></td></tr>
+      <tr><td><a href="Beginning/#e1" style="text-decoration: none;">Anwensha</a></td>    <td><a href="Beginning/#e6" style="text-decoration: none;">Community Service</a></td></tr>
+      <tr><td><a href="Beginning/#e2" style="text-decoration: none;">ChangeloomsWith.in</a></td> <th></th> </tr>
+      <tr><td><a href="Beginning/#e3" style="text-decoration: none;">TFC</a></td> <th></th> </tr>
+      <tr><td><a href="Beginning/#e4" style="text-decoration: none;">Swamanthan</a></td><th></th></tr>
+      <tr><td><a href="Beginning/#e5" style="text-decoration: none;">ASLP</a></td><th></th></tr>
       </table>
       </div>
   </div>
@@ -308,12 +308,12 @@
     <span id="menu1" class="sliding-middle-out">Join Hands</span>
     <div class="dropdown-content">
       <table id="tab">
-      <tr><td>Volunteer</td>    </tr>
-      <tr><td>Join Us</td>    </tr>
-      <tr><td>Join Us as Educator</td> </tr>
-      <tr><td>Sponser a child</td> </tr>
-      <tr><td>Contribute</td></tr>
-      <tr><td>How to reach Us</td></tr>
+      <tr><td><a href="Join/#f1" style="text-decoration: none;">Volunteer</a></td>    </tr>
+      <tr><td><a href="Join/#f2" style="text-decoration: none;">Join Us</a></td>    </tr>
+      <tr><td><a href="Join/#f3" style="text-decoration: none;">Join Us as Educator</a></td> </tr>
+      <tr><td><a href="Join/#f4" style="text-decoration: none;">Sponser a child</a></td> </tr>
+      <tr><td><a href="Join/#f5" style="text-decoration: none;">Contribute</a></td></tr>
+      <tr><td><a href="Join/#f6" style="text-decoration: none;">How to reach Us</a></td></tr>
       </table>
       </div>
   </div>
