--- a/index.html
+++ b/index.html
@@ -247,12 +247,18 @@
     <div class="dropdown-content">
       <table id="tab"><ul>
       <tr><th>Departments</th> <th>Admissions</th>  <th></th> <th>Quick Links</th></tr>
-      <tr> <td><a href="Academics/#b1" style="text-decoration: none;">Kindergarten</a></td> <td><a href="Academics/#b4" style="text-decoration: none;">Criteria</a></td>  <td><a href="Academics/#b10" style="text-decoration: none;">Students' Council</a></td> <td><a href="b"style="text-decoration: none;">CBSE</a></td></tr>
-      <tr><td><li><a href="Academics/#b1i" style="text-decoration: none;">Students</a></li></td> <td><a href="Academics/#b5" style=" text-decoration: none;">Fee Structure</a></td>  <td><a href="Academics/#b11" style="text-decoration: none;">     Academic Calender</a></td> <td><a href="b" style="text-decoration: none;">NCERT</a></td></tr>
-      <tr><td><li><a href="Academics/#b1ii" style="text-decoration: none;">Educators</a></li></td> <td><a href="Academics/#b6" style ="text-decoration: none;">Enrolment Form</a></td>  <td><a href="Academics/#b12" style="text-decoration: none;">Prizes & Rewards</a></td> <td><a href="b" style="text-decoration: none;">DST</a></td></tr>
-      <tr><td><a href="Academics/#b2" style="text-decoration: none;">Primary Section</a></td> <td><a href="b" style="text-decoration: none;">Payment Link</a></td>  <td><a href="Academics/#b13" style="text-decoration: none;">     Forms</a></td> <td><a href="b" style="text-decoration: none;">NCTE</a></td></tr>
-      <tr><td><li><a href="Academics/#b2i" style="text-decoration: none;">Students</a></li></td> <td><a href="Academics/#b8" style="text-decoration: none;">Scholarships</a></td>  <th></th> <td><a href="b" style="text-decoration: none;">MHRD</a></td></tr>
-      <tr><td><li><a href="Academics/#b2ii" style="text-decoration: none;">Educators</a></li></td> <td><a href="Academics/#b9" style="text-decoration: none;">FAQs</a></td>  <th></th> <td><a href="b" style="text-decoration: none;">    Arvind Gupta Toys</a></td></tr>
+      <tr> <td><a href="Academics/#b1" style="text-decoration: none;">Kindergarten</a></td> <td><a href="Academics/#b4" style="text-decoration: none;">Criteria</a></td>  <td><a href="Academics/#b10" style="text-decoration: none;">Students' Council</a></td> <td><a href="http://www.cbse.nic.in/"style="text-decoration: none;">CBSE</a></td></tr>
+      <tr><td><li><a href="Academics/#b1i" style="text-decoration: none;">Students</a></li></td> <td><a href="Academics/#b5" style=" text-decoration: none;">Fee Structure</a></td>  <td><a href="Academics/#b11" style="text-decoration: none;">     Academic Calender</a></td> <td><a href="http://ncert.nic.in/" style="text-decoration: none;">NCERT</a></td></tr>
+      <tr><td><li><a href="Academics/#b1ii" style="text-decoration: none;">Educators</a></li></td> <td><a href="Academics/#b6" style ="text-decoration: none;">Enrolment Form</a></td>  <td><a href="Academics/#b12" style="text-decoration: none;">Prizes & Rewards</a></td> <td><a href="https://dst.gov.in/" style="text-decoration: none;">DST</a></td></tr>
+      <tr>
+        <td><a href="Academics/#b2" style="text-decoration: none;">Primary Section</a></td> <td><a href="b" style="text-decoration: none;">Payment Link</a></td>  <td><a href="Academics/#b13" style="text-decoration: none;">     Forms</a></td> <td><a href="https://ncte.gov.in/" style="text-decoration: none;">NCTE</a></td>
+      </tr>
+      <tr>
+        <td><li><a href="Academics/#b2i" style="text-decoration: none;">Students</a></li></td> <td><a href="Academics/#b8" style="text-decoration: none;">Scholarships</a></td>  <th></th> <td><a href="https://mhrd.gov.in/" style="text-decoration: none;">MHRD</a></td>
+      </tr>
+      <tr>
+        <td><li><a href="Academics/#b2ii" style="text-decoration: none;">Educators</a></li></td> <td><a href="Academics/#b9" style="text-decoration: none;">FAQs</a></td>  <th></th> <td><a href="http://www.arvindguptatoys.com/toys.html" style="text-decoration: none;">    Arvind Gupta Toys</a></td>
+      </tr>
       <tr><td><a href="Academics/#b3" style="text-decoration: none;">Higher Section</a></td> <td></td>      <th></th> <th>  </th></tr>
       <tr><td><li><a href="Academics/#b3i" style="text-decoration: none;">Students</a></li></td> <td></td>  <td></td>    <td></td></tr>
       <tr><td><li><a href="Academics/#b3ii" style="text-decoration: none;">Educators</a></li></td> <td></td>  <td></td>   <td></td></tr></ul>
@@ -335,10 +341,14 @@
       </div>
       <div class="back">
         <marquee direction="up" scrollamount="8" onmouseover="stop()" onmouseout="start()" id="newstitle" style="background-color:white;box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
-          <div class="newsdiv">Effectory is the unique diary presented by us. You can order it via paytm on 9900</div><br>
+          <div class="newsdiv">In this situation of global shut-down we have decided to conduct the annual examination on the home itself in the supervision of guardian. #FightingCorona #IndiaAgainstCovid19 #CoronaVirus</div><br>
          
-           <div class="newsdiv">Effectory is the unique diary presented by us. You can order it via paytm on 9900</div><br>
-              <div class="newsdiv">Effectory is the unique diary presented by us. You can order it via paytm on 9900</div><br><div class="newsdiv">Effectory is the unique diary presented by us. You can order it via paytm on 9900</div>
+           <div class="newsdiv">#APS welcomes applications from well-qualified and enthusiastic educators with a love for the cause of education.
+To apply Click <a href="https://forms.gle/B3dsoP1PvQBqSDFH6">here</a></div><br>
+              <div class="newsdiv">
+                प्रिय अभिभावक,
+कोरोना के करण उपस्थित इस आपात स्थिति में अपने बच्चे को घर के दूसरे कार्यों में हाथ बटाने को प्रेरित करें । यह उन्हें ऐसे कामों को सीखने में मदद करेंगे जो जीवन के लिए महत्वपूर्ण है जैसे - खाना बनाना, सब्जी धोना, सब्जी काटना, आटा गूँथना, कपड़े धोना, झाड़ू-पोछा लगाना, बटन टाँकना, पौधे को पानी देना, Iron करना, अपने सामान को साफ करना और उन्हें करीने से लगाना, आदि ।
+              </div><br><div class="newsdiv">Effectory is the unique diary presented by us. You can order it via paytm on 9304754551</div>
            </marquee><div style="align-content: center;">
              <span style="width: 350px;background-color: white;text-align: center;box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);color: green;">news</span>
            </div>
